# strategic-argument-red-teaming

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  environment.py  ep.txt  grpo_train.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  training_results.json  worflow.md
create_env/: debate_env.py
envs/: __init__.py  environment.py  errors.py
graders/: __init__.py  tasks.py
models/: schemas.py
prompter/: system_prompt.py
reward_metrics/: reward_metrics.py
schema/: schemas.py
server/: app.py  environment.py
